fixes to input icon alignment

--- a/src/Input/styles.module.css
+++ b/src/Input/styles.module.css
@@ -6,6 +6,7 @@
 
 .inputContainer {
     color: white;
+    position: relative;
 }
 
 .input {
@@ -35,5 +36,5 @@
     position: absolute;
     right: 10px;
     top: 50%;
-    /* transform: translate(0, -50%); */
+    transform: translate(0, -50%);
 }
